[package]
name = "ethers-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "2.0.10"
ethers-solc = "2.0.10"

tokio = { version = "1.32.0", features = ["full"] }

serde_json = "1.0.92"
serde = { version = "1.0.152", features = ["derive"] }

dotenv_codegen = "0.15.0"